--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,5 +10,6 @@
     <!--link를 이용한 것들은 모두 get메서드로 요청 -->
     <a href="/member/save">회원가입</a>
     <a href="/member/login">로그인</a>
+    <a href="/member/">목록</a>
 </body>
 </html>
