--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,9 @@
     <title>index</title>
 </head>
 <body>
-    <h2>hello spring boot</h2>
-
-    <!--link를 이용한 것들은 모두 get메서드로 요청 -->
+    <h2>Hello SpringBoot</h2>
     <a href="/member/save">회원가입</a>
     <a href="/member/login">로그인</a>
-    <a href="/member/">목록</a>
+    <a href="/member/">회원목록</a>
 </body>
 </html>
